<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/item_time"
        android:title="@string/time"
        android:icon="@drawable/ic_baseline_access_time_filled_24"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/item_date"
        android:title="@string/date"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        app:showAsAction="ifRoom"
        />


    <item android:id="@+id/item_save"
        android:title="@string/save"
        android:icon="@drawable/baseline_save_24"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/item_clearAll"
        android:title="@string/clear"
        android:icon="@drawable/baseline_clear_all_24"
        app:showAsAction="ifRoom"
        />

</menu>