<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/item_deleteDetails"
        android:title="@string/delete"
        android:icon="@drawable/details_delete_24"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/item_editDetails"
        android:title="@string/edit"
        android:icon="@drawable/details_edit_24"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/item_shareDetails"
        android:title="@string/share"
        android:icon="@drawable/details_share_24"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/item_calculator"
        android:title="@string/commission_calculate"
        android:icon="@drawable/details_monetization_on_24"
        app:showAsAction="ifRoom"
        />


</menu>