<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item android:id="@+id/item_delete"
        android:title="@string/delete"
        android:icon="@drawable/property_home_delete_24"
        app:showAsAction="always"
        />
    <item android:id="@+id/item_clearAll"
        android:title="@string/clear"
        android:icon="@drawable/baseline_clear_all_24"
        app:showAsAction="always"
        />

    <item android:id="@+id/item_sort"
        android:title="@string/sort"
        android:icon="@drawable/baseline_sort_24"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/item_search"
        android:title="@string/_search"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        />

</menu>