<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:padding="@dimen/dimen_10">

        <LinearLayout
            android:id="@+id/linearProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearEdt"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btnUploadImageProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple_700"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:text="@string/upload_image_profile"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearEdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/linearProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnSave">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/username"
                app:endIconMode="clear_text"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsernamePersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/firstname"
                app:endIconMode="clear_text"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstNamePersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:hint="@string/lastname"
                app:endIconMode="clear_text"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastNamePersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginBottom="@dimen/dimen_20"
                android:hint="@string/phonenumber"
                app:endIconMode="clear_text"
                android:background="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPhoneNumberPersonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>





        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="@dimen/dimen_300dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="@dimen/font_20"
            android:layout_marginTop="@dimen/dimen_20"
            app:layout_constraintTop_toBottomOf="@id/linearEdt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>