<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10"
        android:padding="@dimen/dimen_10"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="@dimen/dimen_10"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="@dimen/dimen_10"
            app:cardElevation="@dimen/dimen_10"
            app:layout_constraintBottom_toTopOf="@id/cardDeleteAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutCurrentPassword"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:hint="@string/current_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtCurrentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutNewPassword"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:hint="@string/new_password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutCurrentPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutConfirm"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:hint="@string/confirm_password"
                    app:endIconMode="password_toggle"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutNewPassword">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnChangePassword"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:text="@string/change_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutConfirm" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_10"
            android:padding="@dimen/dimen_10"
            app:cardCornerRadius="@dimen/dimen_10"
            app:cardElevation="@dimen/dimen_10"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardChangePassword">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEmailAddress"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:hint="@string/email_address"
                    app:endIconMode="clear_text"
                    app:layout_constraintBottom_toTopOf="@id/layoutPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:padding="5dp"
                    android:background="@color/white"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:layout_constraintBottom_toTopOf="@id/consNotice"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutEmailAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/consNotice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    app:layout_constraintBottom_toTopOf="@id/btnDelete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutPassword">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lblDeleteAccount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_10"
                        android:text="@string/delete_account"
                        android:textSize="@dimen/font_15"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/txtDeleteNotice"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtDeleteNotice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:padding="@dimen/dimen_10"
                        android:text="@string/delete_notice"
                        android:textSize="@dimen/font_15"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lblDeleteAccount" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnDelete"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10"
                    android:backgroundTint="@color/light_red"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_20"
                    app:layout_constraintTop_toBottomOf="@id/consNotice"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>




    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>